5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1596_1015.log
== TEST (2019-03-21 19:37:37) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print(min(var1, var2, var3))
print(min(var1, var2, var3))
-- OUTPUT:
-2
-2
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:39:07) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print((var1+var2+var3) min(var1, var2, var3))
print(max(var1, var2, var3))
-- ERROR:
File "XXXX", line 5
    print((var1+var2+var3) min(var1, var2, var3))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:39:28) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print((var1+var2+var3) - min(var1, var2, var3))
print(max(var1, var2, var3))
-- OUTPUT:
-2
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:40:27) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print((var1+var2+var3) - max(var1, var2, var3) - min(var1, var2, var3))
print(max(var1, var2, var3))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:40:38) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print((var1+var2+var3) - max(var1, var2, var3) - min(var1, var2, var3))
print(max(var1, var2, var3))
-- EXECUTION TIME:
0.126793
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
